First section structure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
           <a href="https://unsplash.com/">Unsplash</a>
         </p>
       </aside>
-      <main></main>
+      <main>
+        <section>
+            <div class="first-heading">
+                <p>This is not a real online service! You know you need something like this in your life to help you realise your deepest dreams.</p>
+                <p>Sign up <em>now</em> to get started.</p>
+            </div>
+            <p>You <em>know</em> you want to.</p>
+        </section>
+      </main>
     </div>
   </body>
 </html>
