--- a/index.html
+++ b/index.html
@@ -29,6 +29,42 @@
             </div>
             <p>You <em>know</em> you want to.</p>
         </section>
+        <section>
+            <form action="#" method="get" id="sign-up-form">
+                <h2>Let's do this!</h2>
+                <div class="input-container">
+                    <label for="first-name">First Name</label>
+                    <input type="text" name="first-name" id="first-name" required>
+                </div>
+
+                <div class="input-container">
+                    <label for="last-name">Last Name</label>
+                    <input type="text" name="last-name" id="last-name" required>
+                </div>
+
+                <div class="input-container">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" required>
+                </div>
+
+                <div class="input-container">
+                    <label for="phone-number">Phone Number</label>
+                    <input type="tel" name="phone-number" id="phone-number">
+                </div>
+
+                <div class="input-container">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password">
+                </div>
+
+                <div class="input-container">
+                    <label for="confirm-password">Confirm Password</label>
+                    <input type="password" name="confirm-password" id="confirm-password">
+                </div>
+            </form>
+
+            <button type="submit" form="sign-up-form">Create Account</button>
+        </section>
       </main>
     </div>
   </body>
