--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </form>
 
             <button type="submit" form="sign-up-form">Create Account</button>
+            <p>Already have an account? <a href="#">Log in</a></p>
         </section>
       </main>
     </div>
