First section styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 <p>This is not a real online service! You know you need something like this in your life to help you realise your deepest dreams.</p>
                 <p>Sign up <em>now</em> to get started.</p>
             </div>
-            <p>You <em>know</em> you want to.</p>
+            <div class="next-line">
+                <p>You <em>know</em> you want to.</p>
+            </div>
         </section>
         <section>
             <form action="#" method="get" id="sign-up-form">
