--- a/index.html
+++ b/index.html
@@ -34,37 +34,38 @@
                 <h2>Let's do this!</h2>
                 <div class="input-container">
                     <label for="first-name">First Name</label>
-                    <input type="text" name="first-name" id="first-name" required>
+                    <input type="text" name="first-name" id="first-name" placeholder="John" required>
                 </div>
 
                 <div class="input-container">
                     <label for="last-name">Last Name</label>
-                    <input type="text" name="last-name" id="last-name" required>
+                    <input type="text" name="last-name" id="last-name" placeholder="Smith" required>
                 </div>
 
                 <div class="input-container">
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email" required>
+                    <input type="email" name="email" id="email" placeholder="email@email.com" required>
                 </div>
 
                 <div class="input-container">
                     <label for="phone-number">Phone Number</label>
-                    <input type="tel" name="phone-number" id="phone-number">
+                    <input type="tel" name="phone-number" id="phone-number" placeholder="01234567890" required>
                 </div>
 
                 <div class="input-container">
                     <label for="password">Password</label>
-                    <input type="password" name="password" id="password">
+                    <input type="password" name="password" id="password" minlength="8">
                 </div>
 
                 <div class="input-container">
                     <label for="confirm-password">Confirm Password</label>
-                    <input type="password" name="confirm-password" id="confirm-password">
+                    <input type="password" name="confirm-password" id="confirm-password" required>
                 </div>
             </form>
-
-            <button type="submit" form="sign-up-form">Create Account</button>
-            <p>Already have an account? <a href="#">Log in</a></p>
+            <div class="final-section">
+                <button type="submit" form="sign-up-form">Create Account</button>
+                <p>Already have an account? <a href="#">Log in</a></p>
+            </div>
         </section>
       </main>
     </div>
