--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Sign-up Form</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css" />
-    
   </head>
   <body>
     <div class="container">
@@ -54,12 +53,12 @@
 
                 <div class="input-container">
                     <label for="password">Password</label>
-                    <input type="password" name="password" id="password" minlength="8">
+                    <input type="password" name="password" id="password" minlength="8" required>
                 </div>
 
                 <div class="input-container">
                     <label for="confirm-password">Confirm Password</label>
-                    <input type="password" name="confirm-password" id="confirm-password" required>
+                    <input type="password" name="confirm-password" id="confirm-password" minlength="8" required>
                 </div>
             </form>
             <div class="final-section">
